appId: com.anonymous.mobile
---
- tapOn: "Cricket"
- waitForAnimationToEnd

# LIVE
- assertVisible:
    id: "matchList_cricket_live"
- assertVisible: "IPL 2026"
- assertVisible: "Chennai Super Kings"
- assertVisible: "Mumbai Indians"
- assertVisible: "ICC Champions Trophy 2026"
- assertVisible: "India"
- assertVisible: "Australia"
- assertVisible:
    id: "matchCard_cricket_live_0"
- assertVisible:
    id: "matchCard_cricket_live_1"

# UPCOMING
- tapOn: "UPCOMING"
- waitForAnimationToEnd
- assertVisible:
    id: "matchList_cricket_upcoming"
- assertVisible: "Gujarat Titans"
- assertVisible: "Lucknow Super Giants"
- assertVisible:
    id: "matchCard_cricket_upcoming_0"

# COMPLETED
- tapOn: "COMPLETED"
- waitForAnimationToEnd
- assertVisible:
    id: "matchList_cricket_completed"
- assertVisible: "Chennai Super Kings"
- assertVisible: "Delhi Capitals"
- assertVisible:
    id: "matchCard_cricket_completed_0"
