appId: com.anonymous.mobile
---
- scrollUntilVisible:
    element:
      text: "Soccer"
    direction: LEFT
    timeout: 5000
- tapOn: "Soccer"
- waitForAnimationToEnd

# LIVE
- assertVisible:
    id: "matchList_soccer_live"
- assertVisible: "Liverpool FC"
- assertVisible: "Manchester City"
- assertVisible: "Premier League"
- assertVisible: "FC Barcelona"
- assertVisible: "Real Madrid"
- assertVisible:
    id: "matchCard_soccer_live_0"
- assertVisible:
    id: "matchCard_soccer_live_1"

# UPCOMING
- tapOn: "UPCOMING"
- waitForAnimationToEnd
- assertVisible:
    id: "matchList_soccer_upcoming"
- assertVisible: "Manchester United"
- assertVisible: "Tottenham Hotspur"
- assertVisible:
    id: "matchCard_soccer_upcoming_0"

# COMPLETED
- tapOn: "COMPLETED"
- waitForAnimationToEnd
- assertVisible:
    id: "matchList_soccer_completed"
- assertVisible: "Manchester City"
- assertVisible: "Newcastle United"
- assertVisible:
    id: "matchCard_soccer_completed_0"
